package de.kleemann.co2_hsharz.core.transport;

public enum TransportMediumType {

    CAR_PETROL_SMALL,
    CAR_PETROL_MEDIUM,
    CAR_PETROL_LARGE,
    CAR_DIESEL_SMALL,
    CAR_DIESEL_MEDIUM,
    CAR_DIESEL_LARGE,
    BIKE,
    FOOT,
    TRAIN,
    CAR_HYBRID,
    CAR_ELECTRIC

}
